--- a/DivPuzzle_1.html
+++ b/DivPuzzle_1.html
@@ -6,6 +6,7 @@
   <title>Div Puzzle 初級編</title>
   <link rel="stylesheet" href="デスクトップ/practice_DivPuzzle/css/style.css">
   <link rel="stylesheet" href="デスクトップ/practice_DivPuzzle/css/reset.css">
+  <link rel="stylesheet" href="clearfix.css">
 </head>
 <body>
   <div class="wrapper">
