html内の変更_main clearfixからclearfixへ

--- a/DivPuzzle_1.html
+++ b/DivPuzzle_1.html
@@ -6,13 +6,12 @@
   <title>Div Puzzle 初級編</title>
   <link rel="stylesheet" href="デスクトップ/practice_DivPuzzle/css/style.css">
   <link rel="stylesheet" href="デスクトップ/practice_DivPuzzle/css/reset.css">
-  <link rel="stylesheet" href="clearfix.css">
 </head>
 <body>
   <div class="wrapper">
     <div class="header">
     </div><!--end of header-->
-    <div class="main clearfix">
+    <div class="clearfix">
       <div class="content">
       </div><!--end of content-->
       <div class="side">
