--- a/DivPuzzle_1.html
+++ b/DivPuzzle_1.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Div Puzzle 初級編</title>
-  <link rel="stylesheet" href="デスクトップ/practice_DivPuzzle/css/reset.css">
-  <link rel="stylesheet" href="デスクトップ/practice_DivPuzzle/css/style.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
   <div class="wrapper">
