CSSとファイル名の変更

--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 </head>
 <body>
   <div class="wrapper">
-    <div class="header">
-    </div><!--end of header-->
+    <div class="header"></div><!--end of header-->
     <div class="clearfix">
-      <div class="content">
-      </div><!--end of content-->
-      <div class="side">
-      </div><!--end of side-->
+      <div class="content"></div><!--end of content-->
+      <div class="side"></div><!--end of side-->
     </div><!--end of main clearfix-->
-  <div class="footer">
-  </div><!--end of footer-->
+  <div class="footer"></div><!--end of footer-->
   </div><!--end of wrapper-->
 </body>
 </html>
